Big code style refactor (#498)
* Big code style refactor

* Add spaces before '{'

* Implement requested changes

* Remove no longer needed code

* Optimise imports

* Remove throws clause

* Small Gradle change

* Simplify collector