@@ -60,19 +60,21 @@ public abstract class MixinMinecraftClient {
                 && !(screen instanceof MultiplayerScreen)) {
             Relogger.cantHaveRelogSuccess();
         }
-        if (!GuiBlocker.onOpenGui(screen))
+        if (!GuiBlocker.onOpenGui(screen)) {
             ci.cancel();
+        }
     }
 
     @Inject(method = "disconnect(Lnet/minecraft/client/gui/screen/Screen;)V", at = @At("RETURN"))
     public void onDisconnect(Screen screen, CallbackInfo ci) {
         ServerBrandManager.onDisconnect();
         if (Relogger.isRelogging) {
-            var oldRules = TempRules.getRules().stream().map(rule -> Pair.of(rule, TempRules.get(rule))).collect(Collectors.toList());
+            var oldRules = TempRules.getRules().stream().map(rule -> Pair.of(rule, TempRules.get(rule))).toList();
             Relogger.relogSuccessTasks.add(() -> oldRules.forEach(rule -> TempRules.set(rule.getLeft(), rule.getRight())));
         }
-        for (String rule : TempRules.getRules())
+        for (String rule : TempRules.getRules()) {
             TempRules.reset(rule);
+        }
         RenderSettings.clearEntityRenderSelectors();
     }
 
